# app/Http/Controllers/PhishController.php
@@ -12,7 +12,7 @@ class PhishController extends Controller
 {
       /**
      * @OA\Post(
-     *     path="/api/phishing/data",
+     *     path="/api/phishing",
      *     summary="Phishing",
      *     description="Phishing attack to capture user credentials.",
      *     tags={"Fonctionnalités"},
@@ -48,21 +48,27 @@ class PhishController extends Controller
      * )
      */
     function verifRoles($fonctionnalite_id, $current_role_id)
-    {
-        try {
-            $droit = Droit::where('fonctionnalite_id', $fonctionnalite_id)
-                        ->where('role_id', $current_role_id)
-                        ->first();
+{
+    try {
+        $droit = Droit::where('fonctionnalite_id', $fonctionnalite_id)
+                    ->where('role_id', $current_role_id)
+                    ->first();
 
-            if (!$droit) {
-                return false; 
-            }
-
+        if (!$droit) {
+        
+            Droit::create([
+                'fonctionnalite_id' => $fonctionnalite_id,
+                'role_id' => $current_role_id,
+                'droit' => 1, 
+            ]);
             return true;
-        } catch (\Exception $e) {
-            return false;
         }
+
+        return true; 
+    } catch (\Exception $e) {
+        return false;
     }
+}
     
     public function handlePhish(Request $request)
     {
